test/files/neg/t9310.check
t9310.scala:8: error: (arg: Any): Test.this.C does not take parameters
error after rewriting to Test.this.c.applyDynamic("m")
possible cause: maybe a wrong Dynamic method signature?
  def f = c.m(42)
          ^
1 error
